  UNIX calendar(1) files.

- Documented the "remind -p" format.

- Made Remind communicate day and month names to back-ends so they
  can automatically take on the language Remind was compiled with.

- Directory structure totally reorganized.  Remind now uses an autoconf
  "configure" script which should make life very pleasant for UNIX
   people.

- Made rem2html work properly if more than one month's worth of calendar
  data was produced.

+ BUG FIXES

- Updated "finnish.h" to include proper URL and translation of all
  error messages.

+ BUG INTRODUCTIONS

- The reorganization and use of "configure" probably breaks Remind
  installation on non-UNIX platforms.  Sorry.  I can't fix it until
  I hear back from non-UNIX maintainers.

- Getting rid of fixed-sized buffers meant lots of changes to code.
  No doubt, I missed a few regression tests.

* Version 3.0 Patch 17

+ MINOR ENHANCEMENTS

- Made REMIND accept date specs like "Jan 6, 1998" -- the comma is
  ignored.  This was suggested by John Conover <john@johncon.johncon.com>.
  You can even do "REM 27, Aug, 1998, msg bar".  (But I don't know why
  you'd want to.)

- Added www/rem2html, a Perl script which converts the output of
  `remind -p ...' to an HTML table.  The script was contributed by
  Don Schwarz <darkowl@mcs.net>

- New security features: Because of the risks of statically-allocated
  buffers, REMIND now refuses to run if it is installed set-uid or set-gid.
  If REMIND is run as root, it refuses to read files not owned by root.
  It also won't open group- or world-writable files, no matter who is
  running it.  Finally, if you read a file you don't own, REMIND disables
  RUN and shell().  REMIND doesn't do these security checks on stdin,
  though, so be careful if you run it as root in a script.

  NOTE:  REMIND doesn't do the world- and group-writable checks
  on devices, FIFOs, etc.  Otherwise "remind /dev/null" fails...

+ BUG FIXES
